2006-06-15 00:48 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GModelDecoder.m: Removed old class.
	* GormCore/GNUmakefile: Added new GormGModelWrapperLoader class
	* GormCore/GormClassManager.m: Minor cleanup
	* GormCore/GormDocument.m: Temporarily comment out release of file
	prefs window.
	* GormCore/GormGModelWrapperLoader.m: new loader class for GModel.
	* GormCore/GormNibWrapperLoader.m: Minor cleanup
	* GormInfo.plist: Added GModel entry back in and made both GModel
	and Nib "Viewer" entries.

2006-06-14 22:45 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.[hm]: Added new deactivateEditors and
	reactivateEditors methods.
	* GormCore/GormGormWrapperBuilder.m: Moved connection
	name/object swap here for gorm format.
	* Gorm.m: Calling new deactivate/reactivateEditors

2006-06-14 01:42 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GNUmakefile: Addition of GormNibWrapperLoader to the
	makefile.
	* GormCore/GormClassManager.[hm]: Correction for nib classes loading.
	* GormCore/GormDocument.h:  Added include for GSNibContainer
	* GormCore/GormDocument.m: In NSNibConnector category which 
	implements "isEqual" check if it's the same "kind of class".  If
	not return NO.
	* GormCore/GormGormWrapperBuilder.m: Corrections for connection
	persistence issues.
	* GormCore/GormGormWrapperLoader.m: Corrections for connection
	persistence issues.
	* GormCore/GormNibWrapperLoader.m: Initial cut at class to build the
	nib wrapper.
	* GormCore/GormPrivate.[hm]: Added encoding changes to 
	GormObjectProxy and GormCustomView to allow them to handle
	NSCustomObject and NSCustomView respectively
	* Gorm.m: In testing, don't substitute the browser either.

2006-06-10 21:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormGormWrapperLoader.m: removed uneeded sound/image
	logic.  That is in the parent class.

2006-06-10 10:28 Gregory John Casamento <greg_casamento@yahoo.com>
